--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <hr />
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <ol>
-    <li><a href="https://www.youtube.com/channel/UCnE8of74c88aY5xhspwFHZA">Gaming and YouTube Content Creation</a></li>
-    <li><a href="https://www.youtube.com/channel/UC6zXxyE19-r7MqMOlFmhsMQ">Watching movies</a></li>
+    <li><a href="">Gaming and YouTube Content Creation</a></li>
+    <li><a href="">Watching movies</a></li>
     <li>Stock Trading</li>
   </ol>
   <hr />
