--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing='20'>
-    <td><img src="C:\Users\Pritesh Talande\Documents\Web Development\HTML Personal site\Images\download-modified.png" alt="Pritesh Profile Picture"></td>
+    <td><img src="Images\download-modified.png" alt="Pritesh Profile Picture"></td>
     <td>
       <h1>Pritesh Talande</h1>
       <p><strong><em>Assistant System Engineer at Tata Consultancy Services</em></strong></p>
