--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   <hr />
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <ol>
-    <li><a href="">Gaming and YouTube Content Creation</a></li>
-    <li><a href="">Watching movies</a></li>
-    <li>Stock Trading</li>
+    <li>Gaming and Content Creation : Youtube Channel with 2000 subscribers.</li>
+    <li>Watching movies and reviews : Youbube Channel</li>
+    <li>Stock Trading : Trading with long term perspective.</li>
   </ol>
   <hr />
   <h3><a href="Contact.HTML">Contact Details</a></h3>
