--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <hr />
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <ol>
-    <li>Gaming and Content Creation : Youtube Channel with 2000 subscribers.</li>
-    <li>Watching movies and reviews : Youbube Channel</li>
+    <li>Gaming and content creation : Youtube channel with 2000 subscribers.</li>
+    <li>Watching Movies and content creation : Youtube Channel</li>
     <li>Stock Trading : Trading with long term perspective.</li>
   </ol>
   <hr />
