--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <ol>
     <li>Gaming and content creation : Youtube channel with 2000 subscribers.</li>
-    <li>Watching Movies and content creation : Youtube Channel</li>
-    <li>Stock Trading : Trading with long term perspective.</li>
+    <li>Watching movies and content creation : Youtube Channel</li>
+    <li>Stock trading : Trading with long term perspective.</li>
   </ol>
   <hr />
   <h3><a href="Contact.HTML">Contact Details</a></h3>
