--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <li>Stock trading : Trading with long term perspective.</li>
   </ol>
   <hr />
-  <h3><a href="Contact.HTML">Contact Details</a></h3>
+  <h3><a href="contact.html">Contact Details</a></h3>
 </body>
 
 </html>
